# SPA_SQL_SUPPORTER

./: LICENSE  README.md  app.py  pyproject.toml  requirements.txt  run_app.bat  test_oracle_connect.py
migration-helper-extension/: package-lock.json  package.json
migration-helper-extension/services/: filenameValidator.js  sqlLinter.js  sqlTypeDetector.js  suggestionEngine.js  versionService.js
migration-helper-extension/src/: extension.js
migration-helper-extension/utils/: excelReader.js
static/css/: style.css
static/js/: app.js
templates/: index.html  login.html
